Bug 94896 - [vulkan] new CTS tests fail on i965
Summary: [vulkan] new CTS tests fail on i965
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Ian Romanick
QA Contact: Intel 3D Bugs Mailing List
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-04-11 17:27 UTC by Mark Janes
Modified: 2017-03-22 03:37 UTC (History)
3 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Mark Janes 2016-04-11 17:27:41 UTC
With vulkancts revision f597800e74e8f4bd2c4639a020e147c388f4b149, the following tests began to fail:

dEQP-vk.api.info.device.properties
dEQP-vk.api.info.format_properties.compressed_formats
dEQP-vk.api.info.image_format_properties.1d.optimal.a1r5g5b5_unorm_pack16
dEQP-vk.api.info.image_format_properties.1d.optimal.a2b10g10r10_unorm_pack32
dEQP-vk.api.info.image_format_properties.1d.optimal.a2r10g10b10_unorm_pack32
dEQP-vk.api.info.image_format_properties.1d.optimal.a8b8g8r8_snorm_pack32
dEQP-vk.api.info.image_format_properties.1d.optimal.a8b8g8r8_srgb_pack32
dEQP-vk.api.info.image_format_properties.1d.optimal.a8b8g8r8_unorm_pack32
dEQP-vk.api.info.image_format_properties.1d.optimal.b10g11r11_ufloat_pack32
dEQP-vk.api.info.image_format_properties.1d.optimal.b4g4r4a4_unorm_pack16
dEQP-vk.api.info.image_format_properties.1d.optimal.b5g6r5_unorm_pack16
dEQP-vk.api.info.image_format_properties.1d.optimal.b8g8r8a8_srgb
dEQP-vk.api.info.image_format_properties.1d.optimal.b8g8r8a8_unorm
dEQP-vk.api.info.image_format_properties.1d.optimal.d16_unorm
dEQP-vk.api.info.image_format_properties.1d.optimal.d24_unorm_s8_uint
dEQP-vk.api.info.image_format_properties.1d.optimal.d32_sfloat
dEQP-vk.api.info.image_format_properties.1d.optimal.d32_sfloat_s8_uint
dEQP-vk.api.info.image_format_properties.1d.optimal.e5b9g9r9_ufloat_pack32
dEQP-vk.api.info.image_format_properties.1d.optimal.r16_sfloat
dEQP-vk.api.info.image_format_properties.1d.optimal.r16_snorm
dEQP-vk.api.info.image_format_properties.1d.optimal.r16_unorm
dEQP-vk.api.info.image_format_properties.1d.optimal.r16g16_sfloat
dEQP-vk.api.info.image_format_properties.1d.optimal.r16g16_snorm
dEQP-vk.api.info.image_format_properties.1d.optimal.r16g16_unorm
dEQP-vk.api.info.image_format_properties.1d.optimal.r16g16b16_sfloat
dEQP-vk.api.info.image_format_properties.1d.optimal.r16g16b16_snorm
dEQP-vk.api.info.image_format_properties.1d.optimal.r16g16b16_unorm
dEQP-vk.api.info.image_format_properties.1d.optimal.r16g16b16a16_sfloat
dEQP-vk.api.info.image_format_properties.1d.optimal.r16g16b16a16_snorm
dEQP-vk.api.info.image_format_properties.1d.optimal.r16g16b16a16_unorm
dEQP-vk.api.info.image_format_properties.1d.optimal.r32_sfloat
dEQP-vk.api.info.image_format_properties.1d.optimal.r32g32_sfloat
dEQP-vk.api.info.image_format_properties.1d.optimal.r32g32b32_sfloat
dEQP-vk.api.info.image_format_properties.1d.optimal.r32g32b32a32_sfloat
dEQP-vk.api.info.image_format_properties.1d.optimal.r4g4b4a4_unorm_pack16
dEQP-vk.api.info.image_format_properties.1d.optimal.r5g6b5_unorm_pack16
dEQP-vk.api.info.image_format_properties.1d.optimal.r8_snorm
dEQP-vk.api.info.image_format_properties.1d.optimal.r8_unorm
dEQP-vk.api.info.image_format_properties.1d.optimal.r8g8_snorm
dEQP-vk.api.info.image_format_properties.1d.optimal.r8g8_unorm
dEQP-vk.api.info.image_format_properties.1d.optimal.r8g8b8_snorm
dEQP-vk.api.info.image_format_properties.1d.optimal.r8g8b8_unorm
dEQP-vk.api.info.image_format_properties.1d.optimal.r8g8b8a8_snorm
dEQP-vk.api.info.image_format_properties.1d.optimal.r8g8b8a8_srgb
dEQP-vk.api.info.image_format_properties.1d.optimal.r8g8b8a8_unorm
dEQP-vk.api.info.image_format_properties.1d.optimal.s8_uint
dEQP-vk.api.info.image_format_properties.1d.optimal.x8_d24_unorm_pack32
dEQP-vk.api.info.image_format_properties.2d.optimal.a1r5g5b5_unorm_pack16
dEQP-vk.api.info.image_format_properties.2d.optimal.a2b10g10r10_unorm_pack32
dEQP-vk.api.info.image_format_properties.2d.optimal.a2r10g10b10_unorm_pack32
dEQP-vk.api.info.image_format_properties.2d.optimal.a8b8g8r8_snorm_pack32
dEQP-vk.api.info.image_format_properties.2d.optimal.a8b8g8r8_srgb_pack32
dEQP-vk.api.info.image_format_properties.2d.optimal.a8b8g8r8_unorm_pack32
dEQP-vk.api.info.image_format_properties.2d.optimal.b10g11r11_ufloat_pack32
dEQP-vk.api.info.image_format_properties.2d.optimal.b4g4r4a4_unorm_pack16
dEQP-vk.api.info.image_format_properties.2d.optimal.b5g6r5_unorm_pack16
dEQP-vk.api.info.image_format_properties.2d.optimal.b8g8r8a8_srgb
dEQP-vk.api.info.image_format_properties.2d.optimal.b8g8r8a8_unorm
dEQP-vk.api.info.image_format_properties.2d.optimal.d16_unorm
dEQP-vk.api.info.image_format_properties.2d.optimal.d24_unorm_s8_uint
dEQP-vk.api.info.image_format_properties.2d.optimal.d32_sfloat
dEQP-vk.api.info.image_format_properties.2d.optimal.d32_sfloat_s8_uint
dEQP-vk.api.info.image_format_properties.2d.optimal.e5b9g9r9_ufloat_pack32
dEQP-vk.api.info.image_format_properties.2d.optimal.r16_sfloat
dEQP-vk.api.info.image_format_properties.2d.optimal.r16_snorm
dEQP-vk.api.info.image_format_properties.2d.optimal.r16_unorm
dEQP-vk.api.info.image_format_properties.2d.optimal.r16g16_sfloat
dEQP-vk.api.info.image_format_properties.2d.optimal.r16g16_snorm
dEQP-vk.api.info.image_format_properties.2d.optimal.r16g16_unorm
dEQP-vk.api.info.image_format_properties.2d.optimal.r16g16b16_sfloat
dEQP-vk.api.info.image_format_properties.2d.optimal.r16g16b16_snorm
dEQP-vk.api.info.image_format_properties.2d.optimal.r16g16b16_unorm
dEQP-vk.api.info.image_format_properties.2d.optimal.r16g16b16a16_sfloat
dEQP-vk.api.info.image_format_properties.2d.optimal.r16g16b16a16_snorm
dEQP-vk.api.info.image_format_properties.2d.optimal.r16g16b16a16_unorm
dEQP-vk.api.info.image_format_properties.2d.optimal.r32_sfloat
dEQP-vk.api.info.image_format_properties.2d.optimal.r32g32_sfloat
dEQP-vk.api.info.image_format_properties.2d.optimal.r32g32b32_sfloat
dEQP-vk.api.info.image_format_properties.2d.optimal.r32g32b32a32_sfloat
dEQP-vk.api.info.image_format_properties.2d.optimal.r4g4b4a4_unorm_pack16
dEQP-vk.api.info.image_format_properties.2d.optimal.r5g6b5_unorm_pack16
dEQP-vk.api.info.image_format_properties.2d.optimal.r8_snorm
dEQP-vk.api.info.image_format_properties.2d.optimal.r8_unorm
dEQP-vk.api.info.image_format_properties.2d.optimal.r8g8_snorm
dEQP-vk.api.info.image_format_properties.2d.optimal.r8g8_unorm
dEQP-vk.api.info.image_format_properties.2d.optimal.r8g8b8_snorm
dEQP-vk.api.info.image_format_properties.2d.optimal.r8g8b8_unorm
dEQP-vk.api.info.image_format_properties.2d.optimal.r8g8b8a8_snorm
dEQP-vk.api.info.image_format_properties.2d.optimal.r8g8b8a8_srgb
dEQP-vk.api.info.image_format_properties.2d.optimal.r8g8b8a8_unorm
dEQP-vk.api.info.image_format_properties.2d.optimal.s8_uint
dEQP-vk.api.info.image_format_properties.2d.optimal.x8_d24_unorm_pack32
dEQP-vk.api.info.image_format_properties.3d.optimal.a1r5g5b5_unorm_pack16
dEQP-vk.api.info.image_format_properties.3d.optimal.a2b10g10r10_unorm_pack32
dEQP-vk.api.info.image_format_properties.3d.optimal.a2r10g10b10_unorm_pack32
dEQP-vk.api.info.image_format_properties.3d.optimal.a8b8g8r8_snorm_pack32
dEQP-vk.api.info.image_format_properties.3d.optimal.a8b8g8r8_srgb_pack32
dEQP-vk.api.info.image_format_properties.3d.optimal.a8b8g8r8_unorm_pack32
dEQP-vk.api.info.image_format_properties.3d.optimal.b10g11r11_ufloat_pack32
dEQP-vk.api.info.image_format_properties.3d.optimal.b4g4r4a4_unorm_pack16
dEQP-vk.api.info.image_format_properties.3d.optimal.b5g6r5_unorm_pack16
dEQP-vk.api.info.image_format_properties.3d.optimal.b8g8r8a8_srgb
dEQP-vk.api.info.image_format_properties.3d.optimal.b8g8r8a8_unorm
dEQP-vk.api.info.image_format_properties.3d.optimal.d16_unorm
dEQP-vk.api.info.image_format_properties.3d.optimal.d24_unorm_s8_uint
dEQP-vk.api.info.image_format_properties.3d.optimal.d32_sfloat
dEQP-vk.api.info.image_format_properties.3d.optimal.d32_sfloat_s8_uint
dEQP-vk.api.info.image_format_properties.3d.optimal.e5b9g9r9_ufloat_pack32
dEQP-vk.api.info.image_format_properties.3d.optimal.r16_sfloat
dEQP-vk.api.info.image_format_properties.3d.optimal.r16_snorm
dEQP-vk.api.info.image_format_properties.3d.optimal.r16_unorm
dEQP-vk.api.info.image_format_properties.3d.optimal.r16g16_sfloat
dEQP-vk.api.info.image_format_properties.3d.optimal.r16g16_snorm
dEQP-vk.api.info.image_format_properties.3d.optimal.r16g16_unorm
dEQP-vk.api.info.image_format_properties.3d.optimal.r16g16b16_sfloat
dEQP-vk.api.info.image_format_properties.3d.optimal.r16g16b16_snorm
dEQP-vk.api.info.image_format_properties.3d.optimal.r16g16b16_unorm
dEQP-vk.api.info.image_format_properties.3d.optimal.r16g16b16a16_sfloat
dEQP-vk.api.info.image_format_properties.3d.optimal.r16g16b16a16_snorm
dEQP-vk.api.info.image_format_properties.3d.optimal.r16g16b16a16_unorm
dEQP-vk.api.info.image_format_properties.3d.optimal.r32_sfloat
dEQP-vk.api.info.image_format_properties.3d.optimal.r32g32_sfloat
dEQP-vk.api.info.image_format_properties.3d.optimal.r32g32b32_sfloat
dEQP-vk.api.info.image_format_properties.3d.optimal.r32g32b32a32_sfloat
dEQP-vk.api.info.image_format_properties.3d.optimal.r4g4b4a4_unorm_pack16
dEQP-vk.api.info.image_format_properties.3d.optimal.r5g6b5_unorm_pack16
dEQP-vk.api.info.image_format_properties.3d.optimal.r8_snorm
dEQP-vk.api.info.image_format_properties.3d.optimal.r8_unorm
dEQP-vk.api.info.image_format_properties.3d.optimal.r8g8_snorm
dEQP-vk.api.info.image_format_properties.3d.optimal.r8g8_unorm
dEQP-vk.api.info.image_format_properties.3d.optimal.r8g8b8_snorm
dEQP-vk.api.info.image_format_properties.3d.optimal.r8g8b8_unorm
dEQP-vk.api.info.image_format_properties.3d.optimal.r8g8b8a8_snorm
dEQP-vk.api.info.image_format_properties.3d.optimal.r8g8b8a8_srgb
dEQP-vk.api.info.image_format_properties.3d.optimal.r8g8b8a8_unorm
dEQP-vk.api.info.image_format_properties.3d.optimal.s8_uint
dEQP-vk.api.info.image_format_properties.3d.optimal.x8_d24_unorm_pack32

There are a few failure modes.

deqp-vk.api.info.device.properties fails with:
Fail (deviceProperties - feature limits failed)

deqp-vk.api.info.format_properties.* fails with:
Fail (Compressed format support not valid)

deqp-vk.api.info.image_format_properties.* fails with:
Fail (Required sample counts not supported)
Comment 1 Mark Janes 2016-04-11 17:30:59 UTC
Correction: the tests exist in previous revisions of the CTS.  The updated CTS may have additional checks that now fail in those tests.
Comment 2 Matt Turner 2017-03-22 03:36:06 UTC
Is this still relevant?
Comment 3 Jason Ekstrand 2017-03-22 03:37:37 UTC
Nope.  We definitely pass the CTS and have for some time.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.